Fixed icon visibility on dark card image

--- a/src/main.scss
+++ b/src/main.scss
@@ -399,7 +399,7 @@ input[type="checkbox"],
   // z-index: 1;
 
   &__type {
-    width: 2rem;
+    width: 3rem;
     position: absolute;
     top: 1rem;
     right: 1rem;
